--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 250px;
 }
 .articulo{
     text-align: center;
